# CS489-build-exercise

c/: CMakeLists.txt  job.c  main.c
c/output/: CMakeCache.txt  Makefile  cmake_install.cmake  program
java/: pom.xml
java/src/main/java/ca/uwaterloo/cs489/exercise2/: Job.java  MainApp.java
